Added my contact information

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<meta name="description" content="It's about Nazanin and her projects">
+<meta name="Contact information" content="Nazanin Heidari contact information">
 
 <script src="https://kit.fontawesome.com/8aae44eb8d.js" crossorigin="anonymous"></script>
 <link
@@ -22,11 +22,13 @@
       crossorigin="anonymous"
     ></script>
 <link rel="stylesheet" href="src/style.css">
-    <title>About Nazanin Heidari</title>
-  </head>
-  <body> 
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+
+
+    <title>Document</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Nazanin Heidari</a>
           <button
@@ -53,29 +55,29 @@
               <li class="nav-item">
                 <a class="nav-link text-muted" href="contact.html">Contact me</a>
               </li>
-             
             </ul>
           </div>
         </div>
       </nav>
-<div class="about-section">
-    <div class="row justify-content-md-center ">
-      <div class="col-md-6">
-        <div class="about-section-content">
-      <h2 class="about-head">Hi I am Nazanin Heidari</h1>
-        <br />
-        <h3>Frontend Developer, based in Iran.</h3>
-        <p class="text-dark p-2">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-<a href="work.html" class="btn btn-branding">See my projects</a></div>
-    </div>
-    <div class="col-md-6">
-      <img src="images/Nazanin.jpg" alt="Picture of Nazanin Heidari" class="picture-me" >
-    </div>
+<div class="contaner p-5 pl-3">
+   
+<h2>Let's get in touch!</h2>
+<div class="row">
+    <div class="col-12 pb-5">
+<p>Email:</p>
+<a href="mailto:nazaninheidari1366@gmail.com" target="_blank">nazaninheidari1366@gmail.com</a>
+</div>
 
-    </div>
-  </div>
-  
+<div class="col-12 pb-5">
+<p>Twitter(X):</p>
+<a href="https://www.x.com/nazanin" target="_blank">@nazanin</a>
+</div>
+<div class="col-12 pb-5">
+<p>instagram:</p>
+<a href="https://www.x.com/nazanin" target="_blank">@nazanin.codes</a>
+</div>
 
 </div>
-  </body>
+</div>
+</body>
 </html>
