--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="nav-link text-dark" href="about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-muted" href="about.html#contact">Contact me</a>
+                <a class="nav-link text-muted" href="contact.html">Contact me</a>
               </li>
             </ul>
           </div>
@@ -61,7 +61,7 @@
     <p>👋 Hello, I'm</p>
     <h1>Nazanin Heidari</h1>
     <h2>Front-end developer based in Iran</h2>
-    <a href="about.html#contact" class="btn btn-branding mt-5 me-2">Contact me</a>
+    <a href="contact.html" class="btn btn-branding mt-5 me-2">Contact me</a>
     <a href="about.html" class="btn btn-about mt-5 ms-2">About me</a>
 </div>
 
