--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>Nazanin Heidari Front end developer</title>
 </head>
 <body>
+
   <div class="container">
   <nav class="d-flex justify-content-between">
     <a href="/">
@@ -104,6 +105,42 @@
         </div>
     
 </div>
+
+<footer>
+
+<div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+  <div>
+  <h4>
+    Work Inquiry
+  </h4>
+  
+  <p class="text-muted">
+    Let's work together
+  </p>
+</div>
+<div>
+  <a href="" class="btn btn-branding">Contact me</a>
+</div>
+</div>
+
+  <div class="d-flex justify-content-center mb-5">
+  <a href="mailto:nazaninheidari1366@gmail.com" class="email-link">nazaninheidari1366@gmail.com</a>
+</div>
+
+  <div class="social-link d-flex justify-content-center">
+
+    <a href="https://github.com/Nazaninhk" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
+  <a href="https://www.instagram.com" target="_blank">
+    <i class="fa-brands fa-instagram"></i>
+  </a>
+  <a href="https://www.x.com" target="_blank">
+    <i class="fa-brands fa-twitter"></i>
+  </a>
+  
+</div>
+</footer>
 </div>
 
 </body>
